--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Dongzhou Cheng</a><sup> 1,2</sup>,
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Dongzhou Cheng</a><sup> 1</sup>,
               </span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Lei Zhang</a><sup> *,2</sup>,</span>
-                  <span class="author-block">
+                  <!-- <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Minghui Yao</a><sup> 2</sup>
-                  </span>
+                  </span> -->
                   </div>
 
                   <div class="is-size-5 publication-authors">
